# hypha-smart-contracts

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md  calculate_eos_total_value.sh  jest.config.js  package.json  setup_dao_contracts.sh  tx.json
binaries/: daoContract.abi  daoContract.wasm  token.abi  token.wasm  voice.abi  voice.wasm  voice_token.abi  voice_token.wasm
documentation/: account_creator.md  example_call_paycpu.js  hypha_sale.md  payforcpu.md  staking.md
include/: deferredtrx.hpp  hypha.accountcreator.hpp  hypha.sale.hpp  paycpu.hpp  seeds.startoken.hpp  stake.hpp  staking.hpp  tier_vesting.hpp  token.hpp  upvote.hpp  utils.hpp
pangea/: pangea_permissions_actions.md
ricardian/: token.contracts.md
scripts/: balancecheck.js  compile.js  createAccount.js  dao.js  deploy.command.js  deploy.js  do.js  eos_value.js  eosjs-port.js  helper.js  hypha_dao.js  msig.js  propose_deploy.js  test.js  tokenholders.js  upvotescript.js
src/: CMakeLists.txt  deferredtrx.cpp  hypha.accountcreator.cpp  hypha.sale.cpp  login.cpp  paycpu.cpp  seeds.startoken.cpp  stake.cpp  staking.cpp  tier_vesting.cpp  token.cpp  upvote.cpp
src/upvote_election/: election_round.cpp  graph.cpp  typed_document.cpp  upvote_election.cpp  vote_group.cpp
src/voice/: voice.cpp
test/: hypha.sale.test.js  hypha.stake.test.js  joinhypha.test.archive  joinhypha.test.js
test_old/: action.json  config.json  create_dao.json  dao-other.test.js  dao.test.js  data.json  deferredtrx.test.js  docGraph.js  groups_output.txt  hypha.stake.test.js  hyphatoken.test.js  joinhypha.test.js  (+8 more)
(+43 files in other folders)
